--- a/docs/source/tutorials/CITEseq_Pancreas/UOT_pancreas_tutorial.ipynb
+++ b/docs/source/tutorials/CITEseq_Pancreas/UOT_pancreas_tutorial.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Integrate imbalanced CITE-seq datasets from a pancreas tissue"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
