Update old tutorials

--- a/docs/source/an_bone_marrow_cell_subtype_prediction.ipynb
+++ b/docs/source/an_bone_marrow_cell_subtype_prediction.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Overview\n",
     "\n",
-    "This tutorial demonstrates how to integrate paired bone marrow scRNA-seq and CODEX datasets using CelLink to transfer cell subtype labels across modalities, detect suspicious or inconsistent labels via cross-modal prediction conflicts, and verify potential mislabels through canonical marker expression.\n",
+    "This tutorial demostrates an example of integrating paired human bone marrow scRNA‑seq and CODEX data and adjudicate whether prediction disagreements reflect technical misannotations or genuine biological ambiguity.  \n",
     "\n",
     "Outline\n",
     "1. Data input\n",
@@ -465,7 +465,7 @@
    "metadata": {},
    "source": [
     "## Subtype prediction and conflict detection\n",
-    "Perform bidirectional subtype transfer (RNA→Protein, Protein→RNA) using transport-weight aggregation. Confusion matrices highlight on-diagonal agreement and off-diagonal conflict cohorts for marker-based adjudication."
+    "Perform bidirectional subtype transfer (RNA→Protein, Protein→RNA) using transport‑weight aggregation. Confusion matrices highlight on‑diagonal agreement and off‑diagonal conflict cohorts for marker-based adjudication.\n"
    ]
   },
   {
@@ -633,14 +633,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As shown in above heatmaps, most misprediction exist between CD4+ T-Cell and CD8+ T-Cell, Adipo-MSC and Thy1+ MSC，GMP and Monocyte, and Macrophage and Monocyte"
+    "As shown in the above heatmaps, most disagreements concentrate in: (i) CD4+ vs CD8+ T cells (expected given overlapping activation signatures and partial CD8A/B leakage in some CD4 populations), (ii) Adipo-MSC vs THY1+ MSC (mesenchymal stromal continuum), (iii) GMP vs Monocyte (early myeloid maturation), and (iv) Macrophage vs Monocyte (classical differentiation / activation spectrum). These patterns are biologically plausible and warrant marker‑level scrutiny before declaring misannotation."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cross-modal features are imputed for confidently matched cells and build joint UMAP embeddings to assess modality mixing at lineage and subtype resolution while excluding conflicted cells to reduce noise."
+    "Cross-modal features are imputed for confidently matched cells and joint UMAP embeddings are built to assess modality mixing at lineage and subtype resolution while excluding conflicted cells to reduce noise.\n"
    ]
   },
   {
@@ -898,7 +898,12 @@
    "metadata": {},
    "source": [
     "## Marker-based validation of conflicted populations\n",
-    "Define conflict cohorts (cells whose predicted subtype differs from original) and subset matched cells. Use canonical markers (CD4, CD8A/B, THY1, CD34, CD38, CD14, CD68, CD163, HLA-DRA) to distinguish probable mislabels (marker patterns contradict original subtype) from biologically intermediate states."
+    "Define conflict cohorts (cells whose predicted subtype differs from original) and subset matched cells. Use canonical markers (CD4, CD8A/B, THY1, CD34, CD38, CD14, CD68, CD163, HLA-DRA) to distinguish probable mislabels (marker patterns contradict original subtype) from biologically intermediate states.\n",
+    "\n",
+    "Strategy:\n",
+    "1. Construct boolean index arrays for each salient off‑diagonal pair (e.g., CD4→CD8 disagreement) to simplify downstream filtering.\n",
+    "2. Enumerate combinatorial marker presence/absence patterns; compare against expected immunophenotypes (e.g., true CD8 lineage should co‑express CD8A & CD8B and often lower CD4).\n",
+    "3. Quantify “mislabel ratio” = counts of marker configurations incompatible with original annotation / total conflict cells.\n"
    ]
   },
   {
@@ -946,7 +951,7 @@
    "source": [
     "Example: CD4 vs CD8 T cells. \n",
     "\n",
-    "Among cells annotated as CD4 but predicted as CD8, evaluate CD8A/CD8B co-expression with or without CD4. High CD8A/B with diminished CD4 supports original annotation error over alignment error. (Similar process can be applied to other misprediction cellsubtypes using the ID obtained above.)"
+    "Among cells annotated as CD4 but predicted as CD8, evaluate CD8A/CD8B co-expression with or without CD4. High CD8A/B with diminished CD4 supports original annotation error over alignment error (Similar logic can extend to other subtype pairs using the boolean IDs obtained above)."
    ]
   },
   {
@@ -1056,7 +1061,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The obtained ratio shows that the original annotation is actually of bad quality."
+    "The obtained ratio indicates a substantial fraction of conflict cells exhibit marker configurations inconsistent with their original labels, implying notable annotation noise in the starting metadata rather than systematic CelLink failure. "
    ]
   },
   {
@@ -1064,7 +1069,7 @@
    "metadata": {},
    "source": [
     "## Biological ambiguity example\n",
-    "Monocyte / Macrophage / GMP axis. Use progenitor (CD34, CD38) and differentiation / activation markers (CD14, CD68, CD163, HLA-DRA) to separate clear annotation errors (e.g., GMP lacking progenitor markers) from a genuine Monocyte–Macrophage continuum with graded marker expression, illustrating biologically transitional states revealed by cross-modal conflicts."
+    "Monocyte / Macrophage axis. Use progenitor (CD34, CD38) and differentiation / activation markers (CD14, CD68, CD163, HLA-DRA) to separate clear annotation errors (e.g., GMP lacking progenitor markers yet expressing mature effector markers) from a genuine Monocyte–Macrophage continuum with graded marker expression, illustrating biologically transitional states revealed by cross-modal conflicts.\n"
    ]
   },
   {
@@ -1084,36 +1089,6 @@
    "source": [
     "print(np.sum(rr[(rr.obs['cell_subtype'] == 'Macrophages') & (adipoID), 'THY1'].X == 0))\n",
     "print(np.sum(rr[(rr.obs['cell_subtype'] == 'Macrophages') & (adipoID), 'THY1'].X > 0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "102\n",
-      "11\n",
-      "396\n",
-      "125\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.sum((rr[(rr.obs['cell_subtype'] == 'GMP') & (gmpID), 'CD34'].X > 0) & \\\n",
-    "(rr[(rr.obs['cell_subtype'] == 'GMP') & (gmpID), 'CD38'].X > 0)))\n",
-    "\n",
-    "print(np.sum((rr[(rr.obs['cell_subtype'] == 'GMP') & (gmpID), 'CD34'].X > 0) & \\\n",
-    "(rr[(rr.obs['cell_subtype'] == 'GMP') & (gmpID), 'CD38'].X == 0)))\n",
-    "\n",
-    "print(np.sum((rr[(rr.obs['cell_subtype'] == 'GMP') & (gmpID), 'CD34'].X == 0) & \\\n",
-    "(rr[(rr.obs['cell_subtype'] == 'GMP') & (gmpID), 'CD38'].X > 0)))\n",
-    "\n",
-    "print(np.sum((rr[(rr.obs['cell_subtype'] == 'GMP') & (gmpID), 'CD34'].X == 0) & \\\n",
-    "(rr[(rr.obs['cell_subtype'] == 'GMP') & (gmpID), 'CD38'].X == 0)))"
    ]
   },
   {
@@ -1345,7 +1320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, the \"prediction inconsistency\" of CelLink may not be due to the wrong labels, but rather because it captured the high molecular-level similarity between these two types of cells. This misprediction reflects a real biological phenomenon rather than a technical mistake."
+    "In this case, the apparent “prediction inconsistency” of CelLink likely reflects genuine molecular proximity between related states rather than label failure. CelLink uncovers these continua by permitting probabilistic mass sharing instead of forcing hard one‑to‑one matches."
    ]
   }
  ],
