Update old tutorials

--- a/docs/source/an_bone_marrow_cell_subtype_prediction.ipynb
+++ b/docs/source/an_bone_marrow_cell_subtype_prediction.ipynb
@@ -14,7 +14,7 @@
     "1. Data input\n",
     "2. Data preprocessing\n",
     "3. Cellink object construction and alignment\n",
-    "4. Subtype prediction and conflict detection\n",
+    "4. Cross-modality feature prediction and cell-subtype matching\n",
     "5. Marker-based validation of conflicted populations\n",
     "6. Biological ambiguity example"
    ]
@@ -464,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Subtype prediction and conflict detection\n",
+    "## Cross-modality feature prediction and cell-subtype matching\n",
     "Perform bidirectional subtype transfer (RNA→Protein, Protein→RNA) using transport‑weight aggregation. Confusion matrices highlight on‑diagonal agreement and off‑diagonal conflict cohorts for marker-based adjudication.\n"
    ]
   },
