Update old tutorials

--- a/docs/source/cellink_pancreas.ipynb
+++ b/docs/source/cellink_pancreas.ipynb
@@ -11,7 +11,7 @@
     "This tutorial demonstrates how to integrate HPAP107 scRNA-seq and CODEX datasets from human pancreas using CelLink when cell-type annotations are available.\n",
     "\n",
     "Outline\n",
-    "1. DATA input\n",
+    "1. Data input\n",
     "2. Data preprocessing\n",
     "3. Cellink object construction and alignment\n",
     "4. Feature imputation and cell-type matching\n",
